fix(layouts): add missing space for minify

--- a/assets/sass/_partial/_footer/_copyright.scss
+++ b/assets/sass/_partial/_footer/_copyright.scss
@@ -18,6 +18,7 @@
 
     .heart {
       font-size: 14px;
+      margin: 4px;
     }
   }
 }
